[project]
name = "mara-li"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel>=2.16.0",
    "beautifulsoup4>=4.12.3",
    "bracex>=2.5.post1",
    "cairocffi>=1.7.1",
    "cairosvg>=2.7.1",
    "certifi>=2024.12.14",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.0",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "csscompressor>=0.9.5",
    "cssselect2>=0.7.0",
    "defusedxml>=0.7.1",
    "ghp-import>=2.1.0",
    "gitdb>=4.0.11",
    "gitpython>=3.1.43",
    "htmlmin2>=0.1.13",
    "idna>=3.10",
    "jinja2>=3.1.5",
    "jsmin>=3.0.1",
    "markdown>=3.7",
    "markupsafe>=3.0.2",
    "mdx-breakless-lists>=1.0.1",
    "mdx-wikilink-plus>=1.4.1",
    "mergedeep>=1.3.4",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-callouts>=1.15.0",
    "mkdocs-custom-fences>=0.1.2",
    "mkdocs-custom-tags-attributes>=0.3.3",
    "mkdocs-embed-file-plugins>=2.0.10",
    "mkdocs-encryptcontent-plugin>=3.0.3",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.5.49",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-meta-descriptions-plugin>=3.0.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-obsidian-links>=1.0.2",
    "natsort>=8.4.0",
    "packaging>=24.2",
    "paginate>=0.5.7",
    "pathspec>=0.12.1",
    "pillow>=11.0.0",
    "platformdirs>=4.3.6",
    "pycparser>=2.22",
    "pycryptodome>=3.21.0",
    "pygments>=2.18.0",
    "pymdown-extensions>=10.12",
    "python-dateutil>=2.9.0.post0",
    "python-frontmatter>=1.1.0",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
    "pyyaml-env-tag>=0.1",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "setuptools>=75.6.0",
    "six>=1.17.0",
    "smmap>=5.0.1",
    "soupsieve>=2.6",
    "tinycss2>=1.4.0",
    "urllib3>=2.3.0",
    "watchdog>=6.0.0",
    "wcmatch>=10.0",
    "webencodings>=0.5.1",
]

[tool.ruff.lint]
select = ["PTH", "ANN", "N", "Q", "PL", "E", "F", "I"]
ignore = ["E501"]
exclude = ["tests", "docs", "build", "dist", "venv", "venv3", "venv3.6", "venv3.7", "venv3.8", "venv3.9", "venv3.10", "__pycache__"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
