[project]
name = "mara-li"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel",
    "beautifulsoup4",
    "bracex",
    "cairocffi",
    "cairosvg",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "colorama",
    "csscompressor",
    "cssselect2",
    "defusedxml",
    "ghp-import",
    "gitdb",
    "gitpython",
    "htmlmin2",
    "idna",
    "jinja2",
    "jsmin",
    "markdown",
    "markupsafe",
    "mdx-breakless-lists",
    "mdx-wikilink-plus",
    "mergedeep",
    "mkdocs",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-callouts",
    "mkdocs-custom-fences",
    "mkdocs-custom-tags-attributes",
    "mkdocs-embed-file-plugin",
    "mkdocs-embed-file-plugins",
    "mkdocs-encryptcontent-plugin",
    "mkdocs-get-deps",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-glightbox",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocs-meta-descriptions-plugin",
    "mkdocs-minify-plugin",
    "mkdocs-obsidian-links",
    "natsort",
    "packaging",
    "paginate",
    "pathspec",
    "pillow",
    "platformdirs",
    "pycparser",
    "pycryptodome",
    "pygments",
    "pymdown-extensions",
    "python-dateutil",
    "python-frontmatter",
    "pytz",
    "pyyaml",
    "pyyaml-env-tag",
    "regex",
    "requests",
    "setuptools",
    "six",
    "smmap",
    "soupsieve",
    "tinycss2",
    "urllib3",
    "watchdog",
    "wcmatch",
    "webencodings",
]

[tool.ruff.lint]
select = ["PTH", "ANN", "N", "Q", "PL", "E", "F", "I"]
ignore = ["E501"]
exclude = ["tests", "docs", "build", "dist", "venv", "venv3", "venv3.6", "venv3.7", "venv3.8", "venv3.9", "venv3.10", "__pycache__"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
